clusters/proxmox-home/apps/wakapi/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wakapi
  labels:
    app.kubernetes.io/name: wakapi
    app.kubernetes.io/component: namespace
